[gd_scene load_steps=2 format=2]

[ext_resource path="res://Escena.gd" type="Script" id=1]

[node name="Escena" type="Node2D"]
script = ExtResource( 1 )

[node name="NodeEnEscenaUno" type="Node" parent="."]

[node name="NodeEnEscenaDos" type="Node" parent="."]

[node name="NodeEnEscenaTres" type="Node" parent="."]

[node name="NodeEnEscenaCuatro" type="Node" parent="."]

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 90, 10 )
